great tea section added

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             </div>
         </div>
     </header>
-    <main class="container mx-auto">
+    <main class="container mx-auto px-3">
         <!-- featured our section starts here  -->
          <h1 class="text-5xl font-extrabold text-[#1c1c1c] text-center">Our Featured Products</h1>
-         <p class="text-xs text-[#777] font-medium text-center w-[901px] mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+         <p class="text-xs text-[#777] font-medium text-center md:w-[901px] mx-auto mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
          <!-- tea decoration section here  -->
         <section class="flex flex-wrap items-center justify-evenly gap-10 my-12">
             <div class="text-center border border-s-orange-50 bg-[#F4F4F4] w-[267px] flex flex-col items-center p-7 rounded-xl">
@@ -84,8 +84,35 @@
             </div>
 
         </section>
-        </main>
+        <!-- great tea section  -->
 
+        <section class=" flex flex-col md:flex-row lg:flex-row md:fl items-center gap-10 ">
+            <div class="flex-1 gap-8 grid grid-cols-2">
+                <div class="h-[136px] rounded bg-gradient-to-r from-red-100 to-amber-100 ">
+
+                </div>
+                <div class="row-span-2 h-[355px]  flex flex-col items-center justify-center bg-[#E6A62319] ">
+                    <img src="./images/kindpng_1701083 2.png" alt="" srcset="">
+                </div>
+                <div class=" row-span-2  h-[355px] flex flex-col items-center justify-center bg-[#57463919]">
+                    <img src="./images/kindpng_1701083 4.png" alt="">
+                </div>
+                <div class="  bg-gradient-to-r from-red-100 to-amber-100  h-[136px] ">
+
+                </div>
+
+            </div>
+            <div class="flex-1">
+                <h1 class="text-5xl font-extrabold text-[#1c1c1c]">Great Tea, Freshly Presented</h1>
+                <p class="text-xs text-[#777] font-medium my-5"> The meaning of gong cha is chanese is to provide the best tea to emperor <br> from all possessions . It represents the highest quality and self expectation. <br> Establishing in 2006, Gong cha had been deeply appreciated by its custoers <br> because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h1 class="text-xl font-extrabold text-[#1c1c1c] mb-3">Unique Taste</h1>
+                <p class="text-xs text-[#777] font-medium">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+                <h1 class="text-xl font-extrabold text-[#1c1c1c] mb-3 mt-4">Premium Quality</h1>
+                <p class="text-xs text-[#777] font-medium">Premium Quality that makes tea more <br> elegant and more durable when you use it.</p>
+            </div>
+        </section>
+        </main>
+        
     <footer>
 
     </footer>  
